added all necessary files

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 
   <head>
     <title>My Final Project</title>
+    <script src="helpers/p5.js"></script>
+  	<script src="helpers/p5.sound.js"></script>
+  	<script src="helpers/p5.dom.js"></script>
+  	<script src="project.js"></script>
     <link rel="stylesheet" href="base.css">
   </head>
   <body>
