--- a/index.html
+++ b/index.html
@@ -2,32 +2,15 @@
 
   <head>
     <title>My Final Project</title>
-    <script src="helpers/p5.js"></script>
-  	<script src="helpers/p5.sound.js"></script>
-  	<script src="helpers/p5.dom.js"></script>
-  	<script src="project.js"></script>
+    <script language="javascript" src="helpers/p5.js"></script>
+  	<script language="javascript" src="helpers/p5.sound.js"></script>
+  	<script language="javascript" src="helpers/p5.dom.js"></script>
+    <script language="javascript" src="helpers/helpers.js"></script>
+  	<script language="javascript" src="project.js"></script>
     <link rel="stylesheet" href="base.css">
   </head>
   <body>
-    <h1>AUDIO VISUALIZATION</h1>
-    <h2>Creative Tool / Data Visualization</h2>
-    <h2>Griffin Keller</h2>
-    <h3> Description </h3>
-    <p>The aim of this tool is to visualize realtime audio in a room. The program will use the computer's input to record different types of sound, which will affect an oscilloscope type wave that runs throughout the middle of the screen. Sharp changes in audio will leave impressions of the line on the screen, so that after a while, an abstract image will be created that can be saved.</p>
-    <h3> Motivation </h3>
-    <p>I wish to create this tool as a way to give weight to sound. I've always been interested in audio visualizaiton, and this seems like the right outlet to explore it's possibilies.</p>
-    <h3> Take Away </h3>
-    <p>the tool will serve dual purposes. The first will be to craete visual accompanyment to music or performances. The second will be to save moments with abstract imagery - to remember the emotion and feeling associated with a memory rather than an image.</p>
-    <h3> Interaction </h3>
-    <p>The user will first begin the audio capture by pressing a button(there could be various options of visaul style). After that, the program will work for itself, and the only other interaction necissary will be to stop the recording. However, during the recording process, the user will have the option to click and create other visual imagery/markers.</p>
-    <h3> Research </h3>
-    <p><a href="http://p5js.org/reference/#/libraries/p5.sound">p5 sound</a><br>
-    <a href="http://www.michellechandra.com/portfolio/star-trails/">stars visualization</a><br></p>
-    <h3> Inspiration </h3>
-    <img class="other" src="assets/3.jpg" />
 
-    <img class="img" src="assets/1.jpg" />
-      <img class="img2" src="assets/2.jpg" />
 
   </body>
 
