--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <html>
 
   <head>
+    <meta charset="utf-8">
     <title>My Final Project</title>
     <script language="javascript" src="helpers/p5.js"></script>
-  	<script language="javascript" src="helpers/p5.sound.js"></script>
   	<script language="javascript" src="helpers/p5.dom.js"></script>
-    <script language="javascript" src="helpers/helpers.js"></script>
+  	<script language="javascript" src="helpers/p5.sound.js"></script>
   	<script language="javascript" src="project.js"></script>
     <link rel="stylesheet" href="base.css">
   </head>
   <body>
 
+    <h1>SPECTROGRAPH WAVE</h1>
+    <h2>an abstract visualizer created to give physicality to sound</h2>
+    <p>To save the illustration of sound for the last 15 secods, simply click your mouse <br><br>
+    To ensure best performance, please use Firefox</p>
 
   </body>
 
